--- a/test.html
+++ b/test.html
@@ -6,7 +6,9 @@
     <title>Emscripten-Generated Code</title>
   </head>
   <body>
-    <script type="text/javascript" src="sqr.js"></script>
+    <textarea id="output" disabled="true"></textarea>
+    <script type="text/javascript" src="tbas.js"></script>
+    <script type="text/javascript" src="utils.js"></script>
   </body>
 </html>
 
